--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="askbutton">Ask</string>
+    <string name="textViewReading">Make everyday decisions easier!</string>
 </resources>
